Added code to remember positions and sizes of windowsrties/Settings.settings

--- a/LostArkLogger/App.config
+++ b/LostArkLogger/App.config
@@ -34,6 +34,18 @@
    <setting name="DisplayNames" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="F2Location" serializeAs="String">
+    <value>300, 300</value>
+   </setting>
+   <setting name="F2Size" serializeAs="String">
+    <value>314, 184</value>
+   </setting>
+   <setting name="F1Location" serializeAs="String">
+    <value>0, 0</value>
+   </setting>
+   <setting name="F1Size" serializeAs="String">
+    <value>314, 184</value>
+   </setting>
   </LostArkLogger.Properties.Settings>
  </userSettings>
 </configuration>
