--- a/LostArkLogger/Properties/Settings.settings
+++ b/LostArkLogger/Properties/Settings.settings
@@ -17,5 +17,17 @@
     <Setting Name="DisplayNames" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="F2Location" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">300, 300</Value>
+    </Setting>
+    <Setting Name="F2Size" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">314, 184</Value>
+    </Setting>
+    <Setting Name="F1Location" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="F1Size" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">314, 184</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
