--- a/InetOptimizer/App.config
+++ b/InetOptimizer/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="InetOptimizer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="LostArkLogger.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -18,6 +19,35 @@
 		</assemblyBinding>
 	</runtime>
  <userSettings>
+  <InetOptimizer.Properties.Settings>
+   <setting name="IgnoreWarning" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Npcap" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="AutoUpload" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="DisplayNames" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="F2Location" serializeAs="String">
+    <value>300, 300</value>
+   </setting>
+   <setting name="F2Size" serializeAs="String">
+    <value>314, 184</value>
+   </setting>
+   <setting name="F1Location" serializeAs="String">
+    <value>0, 0</value>
+   </setting>
+   <setting name="F1Size" serializeAs="String">
+    <value>314, 184</value>
+   </setting>
+   <setting name="ipfilter" serializeAs="String">
+    <value>192.168.1.100</value>
+   </setting>
+  </InetOptimizer.Properties.Settings>
   <LostArkLogger.Properties.Settings>
    <setting name="IgnoreWarning" serializeAs="String">
     <value>False</value>
